--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@
 *.exe
 *.app
 
+# Input files
+*.in
+
 # Output files
 *.out
 *.log
@@ -42,3 +45,14 @@
 
 #DVR Executable
 DVR
+
+#building script
+*.sh
+
+# videos
+*.avi
+
+# figures
+*.jpg
+*.eps
+*.png
